# Hojo-MemoryEngine

./: CONTRIBUTING.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  README.zh-CN.md  SECURITY.md  k8s-Deployment.yaml
backend/: Dockerfile  README.md  logging.yaml  pyproject.toml  run_server.sh
backend/migrations/mysql/: 001_initial_schema.sql  002_seed_dev.sql  003_seed_dreaming_job.sql  004_merge_rule.sql  schema-design-v0.5.md
backend/scripts/: apply_migrations.py  e2e_smoke.py  run_e2e.sh  test_all_features.py
backend/src/memory_engine/: __init__.py  config.py  main.py
backend/src/memory_engine/api/: deps.py
backend/src/memory_engine/constants/: user_memory_item.py
backend/src/memory_engine/consumers/: __init__.py  billing_events_consumer.py  canal_binlog_consumer.py  runner.py  schema_changelog_consumer.py
backend/src/memory_engine/core/: context.py  exceptions.py  permissions.py  user_api_errors.py
backend/tests/: test_api_auth.py  test_canal_capability.py  test_config_empty_env.py  test_config_mongo.py  test_config_redis.py  test_health.py  test_memory_field_dedup.py  test_memory_merge.py  test_memory_parse_llm.py  test_memory_retrieve.py  test_memory_source.py  test_mongo_match_methods.py  test_mongo_user_id_filter.py  test_new_features.py  test_onboarding.py  test_parse_rule_active.py  test_permissions.py  test_schema_search_llm.py  test_user_memory_export_email_api.py  test_user_memory_item_detail_api.py  test_user_memory_list_api.py  test_user_memory_service_api.py
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_credentials.py  test_parse_rule_helpers.py
(+155 files in other folders)
