[project]
name = "memory-engine-backend"
version = "0.5.0"
description = "Memory Engine API backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlalchemy>=2.0.36,<3",
    "greenlet>=3.1.0",
    "aiomysql>=0.2.0",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "redis>=5.2.0,<6",
    "motor>=3.6.0,<4",
    "qdrant-client>=1.12.0,<2",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "passlib[bcrypt]>=1.7.4,<2",
    "bcrypt>=4.0,<4.3",
    "python-multipart>=0.0.17",
    "aiokafka>=0.12.0",
    "temporalio>=1.8.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "anyio>=4.6.0",
]

[project.scripts]
memory-engine-worker = "memory_engine.temporal.worker:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
